# raspberry_pi_projects

hand_controlled_car/: CMakeLists.txt  main.c  motoruart.c  test.c
hand_controlled_car/CodeinPython/: L298_motor.py  accelerometer.py  accelerometertest.py  car.py  motor1.py  uart.py
touchscreen/: CMakeLists.txt  TouchScreen.c  touchscreen_demo.c  ts_lcd.h  ts_test.c  ts_test.h
